{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 21,
  "lineage": "80034772-153a-d7e7-4354-c53ece2c2ba4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "devops_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.100.239.232",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-07-14T00:12:11.105-07:00",
            "id": "projects/devops-creole/regions/asia-south1/addresses/devops-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "devops-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "devops-creole",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-creole/regions/asia-south1/addresses/devops-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/devops-creole/zones/asia-south1-a/instances/devops-creolestudio-vm"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_defectdojo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-13T23:23:33.086-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-creole/global/firewalls/devsecops-allow-defectdojo",
            "log_config": [],
            "name": "devsecops-allow-defectdojo",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/networks/default",
            "priority": 1000,
            "project": "devops-creole",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/firewalls/devsecops-allow-defectdojo",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "devsecops-tools"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-13T06:32:52.717-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-creole/global/firewalls/devsecops-allow-sonarqube",
            "log_config": [],
            "name": "devsecops-allow-sonarqube",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/networks/devsecops-vpc",
            "priority": 1000,
            "project": "devops-creole",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/firewalls/devsecops-allow-sonarqube",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-13T06:32:53.119-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-creole/global/firewalls/devsecops-allow-ssh",
            "log_config": [],
            "name": "devsecops-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/networks/devsecops-vpc",
            "priority": 1000,
            "project": "devops-creole",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/firewalls/devsecops-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "devops_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "devops-creolestudio-vm",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2404-noble-amd64-v20260710",
                    "provisioned_iops": 3600,
                    "provisioned_throughput": 290,
                    "size": 100,
                    "type": "hyperdisk-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-creole/zones/asia-south1-a/disks/devops-creolestudio-vm"
              }
            ],
            "can_ip_forward": false,
            "confidential_instance_config": [
              {
                "enable_confidential_compute": false
              }
            ],
            "cpu_platform": "AMD Turin",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ops-agent-policy": "v2-template-1-7-0"
            },
            "enable_display": false,
            "id": "projects/devops-creole/zones/asia-south1-a/instances/devops-creolestudio-vm",
            "instance_id": "6369080510344945769",
            "label_fingerprint": "u1i0GMcZHVI=",
            "machine_type": "n4d-standard-2",
            "metadata": {
              "enable-osconfig": "TRUE",
              "ssh-keys": "divyarajsinh.champavat:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICyl0bBiEWIypfeVCZDGuJBuZ10GsnTf8jPznu0lC+Kk divyarajsinh.champavat@creolestudios.com\narjun.latiwala:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIP//Xw6QXObNmNxwwnGGtA/yLOAR7QWFtoAiqmy42I3U arjun.latiwala@creolestudios.com",
              "startup-script": "#!/bin/bash\nset -e\n\necho \"Starting DevOps Server Setup...\"\n\n# ------------------------------------------------------------------------------\n# 1. Update and install prerequisites\n# ------------------------------------------------------------------------------\napt-get update\napt-get install -y ca-certificates curl gnupg lsb-release\n\n# ------------------------------------------------------------------------------\n# 2. Set OS prerequisites for Elastics [...]
            },
            "metadata_fingerprint": "lt6iEwc2Pg8=",
            "name": "devops-creolestudio-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.239.232",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/networks/default",
                "network_ip": "10.160.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-creole/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "devops-creole"
              }
            ],
            "project": "devops-creole",
            "reservation_affinity": [
              {
                "type": "ANY_RESERVATION"
              }
            ],
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-creole/zones/asia-south1-a/instances/devops-creolestudio-vm",
            "service_account": [
              {
                "email": "584748311180-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "devsecops-tools"
            ],
            "tags_fingerprint": "X2vH-cvApJE=",
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.devops_static_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "devsecops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-creole/global/networks/devsecops-vpc",
            "mtu": 0,
            "name": "devsecops-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1255223642904155660",
            "project": "devops-creole",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/networks/devsecops-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "devsecops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-13T06:32:53.975-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/devops-creole/regions/us-central1/subnetworks/devsecops-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "devsecops-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-creole/global/networks/devsecops-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-creole",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-creole/regions/us-central1/subnetworks/devsecops-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.devsecops_vpc"
          ]
        }
      ]
    }
  ]
}